# MemAccessTrace

./: .gitignore  CMakeLists.txt  README.md
examples/access_info/: README.md  access_info.py  requirements.txt
include/: trace_events.h  trace_file.h
src/: pybind_trace_file.cpp  trace_file.cpp
test/: CMakeLists.txt  test_trace_file.cpp  test_trace_file.py
